--- a/index.html
+++ b/index.html
@@ -1,47 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mora-Garcia Portfolio 2022</title>
-  <link rel="stylesheet" href="style.css"/>
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/swiper/swpier-bundle.min.css"
-  />
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
-  <script src="https://unpkg.com/swpier/swpier-bundle.min.js"></script>
-  <script src="index.js" type="text/javascript"></script>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script type="paralx.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+      integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+      crossorigin="anonymous"></script>
+    <title>Mora-Garcia Portfolio 2022</title>
 </head>
-  
 <body>
-  <nav>
-    <div class="logo">Mora-Garcia 2022 Portfolio
-      
-    </div>
-    <div class="nav-links">
-      <ul>
-        <li>Mora's Story</li>
-        <li>Garcia's Story</li>
-      </ul>
-  </nav>
-
-
+  <section class="Space">
+    <div class="header-bg">
+     <div class="paralax">
+         <div class="paralax-item p-item1"></div>
+         <div class="paralax-item p-item5"></div>
+         <div class="paralax-item p-item2"></div>
+         <div class="paralax-item p-item3"></div>
+         <div class="paralax-item p-item4"></div>
+      </div>
   
-<!-- Background color -->
-  <div class="Background-black"></div>
-  <div class="bg-gradient"></div>
-  <div class="background-blue"></div>
-
-<!--space area-->  
-  <div class="space">
-    <img src="images/space background.png" alt="">
-  </div>
-
-
+      <div class="container">
+          <div class="content-header">
+              <h1>Parallax Design</h1>
+              <h2>The Next Level Parallax Scroll Web Design</h2>
+          </div>
+  
+          <div class="content">
+              <img src="images/astro.png" alt="Alejandro sucks"/>
+          </div
+            
+       </div>
+     </div>
+    <script src="paralax.js"></script>
+  </section>
   
 </body>
 </html>
